Working on the creation of rows and relations